# bci-essentials-python

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  mi_ch_select_test.ipynb  mi_ch_select_test.py  mypy.ini  p300_ch_select_test.py  profile.json  pyproject.toml  raw_trial_eeg.npz  requirements.txt  setup.py  switch-montage.txt  testytest.py
.github/workflows/: pre-commit-config.yaml  publish-on-tag.yml  pull-request-build.yml  push-code-files-to-APIdocs-repository.yml
adam_ML/: KNN.py  LDA.py  LDA_textbook.py  excel_line.py  linear_regression.py  linear_regression_NP.py  logisitc_regression_LINEAR.py  logistic_regression_NP.py  logistic_regression_SIMPLE.py  sigmoid_func.py  testing.py
bci-essentials-python/: LICENSE
bci-essentials-python/bci_essentials/: classification.py
bci-essentials-python/examples/: mi_offline_test.py  p300_unity_backend.py  (+2 more)
bci_essentials/: OLD__eeg_data.py  __init__.py  bci_controller.py  bci_data.py  channel_selection.py  classification.py  eeg_data.py  erp_data.py  old_eeg_data.py  resting_state.py  session_saving.py  signal_processing.py  visuals.py
data/: switch_example.xdf
docs/: bci_essentials.html  bci_essentials_diagram.drawio  index.html  search.js
env/: bci_essentials_env.yml  bci_essentials_requirements.txt  bci_online.yml
examples/: eeg_lsl_sim.py  headset_sim--dsi7_NOrefchannel.py  headset_sim--dsi7_emptyTRGchannel.py  headset_sim--dsi7_refchannel.py  headset_sim--emotivEpocplus.py  marker_lsl_sim.py  mi_ch_select_test-debug_log_level.py  mi_ch_select_test.py  mi_offline_test.py  mi_unity_backend.py  p300_SingleChannelERP_offline_test.py  p300_ch_select_test.py  p300_offline_test.py  p300_unity_backend.py  rs_offline_test.py  ssvep_ncan_unity_backend.py  ssvep_offline_test .py  ssvep_offline_test.py  ssvep_offline_test_n.ipynb  ssvep_offline_test_tf.py  ssvep_unity_backend.py  ssvep_unity_backend_tf.py  switch_offline_test.py  switch_unity_backend.py
tests/: test_channel_selection.py  test_channel_selection_predictions  test_classifier_save.py  test_eeg_data.py  test_load_data.py  test_logger.py  test_lsl_sources.py  test_offline_pipelines.py  test_print.py  test_remove_flats.py  test_signal_processing.py  test_smoke.py  test_trial_saving.py  test_xdf_sources.py
tutorials/: 01_show_me_the_data.ipynb  03_ERP_offline_processing.ipynb
(+84 files in other folders)
