[project]
name = "bci-essentials"
version = "0.0.2"
description = "Python backend for bci-essentials"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"numpy",
	"scipy",
	"scikit-learn",
	"joblib",
	"pandas",
	"pylsl",
	"pyxdf",
	"matplotlib",
	"seaborn",
	"wheel",
	"pyriemann",
	"tensorflow; platform_machine != 'arm64' ",
	"tensorflow-macos; platform_machine == 'arm64' ",
	"tensorflow-metal; platform_machine == 'arm64' ",
]

[tool.setuptools.packages.find]
exclude = [
	"examples*",
	"docs*"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
